--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2>Quem são nossos Estudantes?</h2>
             <div class="estudante-todos">
                 <img class="imagem-estudante" src="gi.jpg" alt="Aluno 1">
-                <img class="imagem-estudante" src="" alt="Aluno 2">
+                <img class="imagem-estudante" src="Captura de tela 2023-07-03 213505.png" alt="Aluno 2">
                 <img class="imagem-estudante" src="phe.jpg" alt="Aluno 3">
                 <img class="imagem-estudante" src="nai.jpg" alt="Aluno 4">
             </div>
